--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,3 +11,13 @@ body {
 * {
 	font-family: inherit;
 }
+
+.orange-line {
+	@apply h-[2px] my-4 w-16 bg-orange;
+}
+.small-text-grey {
+	@apply text-sm md:text-lg text-center font-Baloo text-grey;
+}
+.border-card {
+	border: 1px solid #ff913a;
+}
