--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,10 @@ body {
 	border: 1px solid #ff913a;
 }
 
+.page-padding {
+	@apply md:px-16 lg:px-[6rem] xl:px-0 xl:w-[1024px] xl:mx-auto xxl:w-[1240px] xxxl:w-[1440px];
+}
+
 /* .swiper-pagination {
 	bottom: -50px;
 } */
